# sapphire_ui

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  WIDGET_GALLERY.md
examples/: README.md  button.rs  text.rs  widget-gallery.rs  widgets.rs
examples/button/: Cargo.toml  README.md
examples/button/src/: main.rs
examples/change_theme/: Cargo.toml
examples/change_theme/src/: main.rs
examples/progress_bar/: Cargo.toml  README.md
examples/progress_bar/src/: main.rs
examples/radio/: Cargo.toml  README.md
examples/radio/src/: main.rs
examples/slider/: Cargo.toml  README.md
examples/slider/src/: main.rs
examples/text_input/: Cargo.toml  README.md
examples/text_input/src/: main.rs
examples/toggler/: Cargo.toml  README.md
examples/toggler/src/: main.rs
examples/vertical_slider/: Cargo.toml  README.md
examples/vertical_slider/src/: main.rs
examples/widget_gallery/: Cargo.toml  README.md
examples/widget_gallery/src/: main.rs
extra/theme_editor/: Cargo.toml  README.md
src/: accent.rs  button.rs  card.rs  checkbox.rs  common.rs  header.rs  lib.rs  primary_container.rs  radio.rs  scrollable.rs  text.rs  text_input.rs  theme.rs  theme_config.rs  widgets.rs
src/theme/: button.rs  checkbox.rs  container.rs  prelude.rs  progress_bar.rs  radio.rs  scrollable.rs  slider.rs  text.rs  text_editor.rs  text_input.rs  toggler.rs
src/widgets/: button.rs  checkbox.rs  container.rs  progress_bar.rs  radio.rs  scrollable.rs  slider.rs  text.rs  text_editor.rs  text_input.rs  toggler.rs
themes/: default.toml  green_dark.toml
