[package]
name = "sapphire_ui"
version = "0.1.0"
edition = "2021"
description = "Sapphire UI Kit based on Iced and prettygooey"
authors = ["mskrasnov <https://t.me/svalka07>"]
license = "MIT"
repository = "https://github.com/mskrasnov/sapphire_ui"
include = ["src", "assets"]
categories = ["gui"]
keywords = ["linux", "sapphire", "iced", "gui", "ui", "widgets"]

[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "s"

[dependencies]
embed-doc-image = "0.1.4"
iced = { version = "0.12.1", features = ["svg", "qr_code"] }
iced_aw = "0.9.3"
lazy_static = "1.5.0"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.15"

[features]
default = []
svg = []
qr_code = []
