[package]
name = "vertical_slider"
version = "0.1.0"
edition = "2021"
description = "An example of using 'vertical_slider' widget"
authors = ["mskrasnov <https://t.me/svalka07>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.12.1"
sapphire_ui.path = "../.."
