[package]
name = "theme_editor"
version = "0.1.0"
edition = "2021"
authors = ["mskrasnov <https://t.me/svalka07>"]
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.12.1"
sapphire_ui.path = "../.."
